Revision history for Module-Starter-Plugin-CGIApp

0.20    Thu Feb 25 20:16:12 EST 2010
        t/test-app.t in generated dists now passes an object to $mech->app
        to match what is done is server.pl
        
0.10    Thu Jan 15 21:12:55 EST 2009
        Added a placeholder file in t/www in generated distributions as the
        empty directory was causing error messages.
        
        More build fixes for Windows.  I think I actually have got it right
        this time.  One problem remains.  Tests will fail if the directory 
        path to where you have unpacked the module has spaces anywhere in it.
        What's up with that?
        
        Ensured that MANIFEST in generated distributions always uses / as the
        directory seperator regardless of operating system.

        Added some entries to MANIFEST.SKIP in generated distributions to
        stop the signature test from failing under Windows.
        
        Thanks to Ron Savage and Cosimo Streppone from the cgiapp list and
        ikegami, cdarke, and andreas1234567 on Perl Monks for their help in 
        solving Windows issues.
        
0.08    Fri Jan  9 18:24:07 EST 2009
        This version just has changes to the build process which hopefully
        will make it work better under Windows.

0.07    Mon Jan  5 17:24:30 EST 2009
        No longer build depends on Test::Builder.
        
        By popular demand, templates use $self instead of $c.
        
        Distributions now include a directory, t/www for static files.
        server.pl has been updated to use it.
        
        Some fixes to tests so the module will build correctly on Windows
        thanks to David Scott <leapingfrog@yahoo.com>

        Some extra documentation for building on Windows added.

        HELP WANTED: despite my best efforts, I am not sure this module is 
        working correctly under Windows.  If you find problems, please
        submit a bug report, or even better, a fix.
