@@ -4,6 +4,9 @@ Revision history for Module-Starter-Plugin-CGIApp
         t/test-app.t in generated dists now passes an object to $mech->app
         to match what is done is server.pl
         
+        Hopefully the problem with Build mistakenly trying to run the 
+        Makefile.PLs from templates is resolved.
+
 0.10    Thu Jan 15 21:12:55 EST 2009
         Added a placeholder file in t/www in generated distributions as the
         empty directory was causing error messages.
